tests/ui/derives/deriving-bounds.stderr
error: cannot find derive macro `Sync` in this scope
  --> $DIR/deriving-bounds.rs:6:10
   |
LL | #[derive(Sync)]
   |          ^^^^
   |
note: unsafe traits like `Sync` should be implemented explicitly
  --> $DIR/deriving-bounds.rs:6:10
   |
LL | #[derive(Sync)]
   |          ^^^^

error: cannot find derive macro `Sync` in this scope
  --> $DIR/deriving-bounds.rs:6:10
   |
LL | #[derive(Sync)]
   |          ^^^^
   |
note: unsafe traits like `Sync` should be implemented explicitly
  --> $DIR/deriving-bounds.rs:6:10
   |
LL | #[derive(Sync)]
   |          ^^^^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: cannot find derive macro `Send` in this scope
  --> $DIR/deriving-bounds.rs:1:10
   |
LL | #[derive(Send)]
   |          ^^^^
   |
note: unsafe traits like `Send` should be implemented explicitly
  --> $DIR/deriving-bounds.rs:1:10
   |
LL | #[derive(Send)]
   |          ^^^^

error: cannot find derive macro `Send` in this scope
  --> $DIR/deriving-bounds.rs:1:10
   |
LL | #[derive(Send)]
   |          ^^^^
   |
note: unsafe traits like `Send` should be implemented explicitly
  --> $DIR/deriving-bounds.rs:1:10
   |
LL | #[derive(Send)]
   |          ^^^^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

